--- a/A look at contracts.ipynb
+++ b/A look at contracts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,37 +29,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "expiration_df = pd.DataFrame.from_records(zip(contract_expirations.keys(), contract_expirations.values()), \n",
-    "                                       columns=['contract', 'expiry'])\n",
+    "                                          columns=['contract', 'expiry'])\n",
     "index_price_df = pd.DataFrame.from_records(zip(index_prices.keys(), index_prices.values()), \n",
     "                                           columns=['date', 'price'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# flatten {contract:{date:price}} to contract, date, price rows\n",
-    "fp_dfs = [pd.DataFrame.from_records(zip(prices.keys(), prices.values(), itertools.repeat(contract, len(prices))) , \n",
+    "fp_dfs = [pd.DataFrame.from_records(zip(prices.keys(), prices.values(), \n",
+    "                                        itertools.repeat(contract, len(prices))), \n",
     "                                    columns=['date', 'price', 'contract'])\n",
     "          for contract, prices in futures_prices.items()\n",
     "]\n",
     "\n",
     "futures_price_df = pd.concat(fp_dfs, ignore_index=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
