--- a/A look at contracts.ipynb
+++ b/A look at contracts.ipynb
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "import bitmex_basis_rate\n",
+    "import bitmex_basis_rate2\n",
     "\n",
     "from pandas.plotting import register_matplotlib_converters\n",
     "register_matplotlib_converters()\n",
